--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -47,8 +47,9 @@
 
       <footer>
         <p>&copy; {{ site.author.name }} 2014 
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a>
+          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll</a>
+          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Bootstrap</a>, fork me in the 
+<a href="https://github.com/ichoyjx" target="_blank">Github</a>
         </p>
       </footer>
 
